# datascience-pjs

./: LICENSE.md  README.md
mw-base/: .dockerignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
mw-base/awfs/: README.md  estorec-test.yaml  mwpam-etl-full.yaml  mwpam-etl-partial.yaml
mw-base/docker/: Dockerfile.mwpam-etl
mw-base/src/: hatch_build.py
mw-base/src/estorectest/: estore_client.py
mw-base/src/mediawiki/: pamutils.py
mw-base/src/mediawiki/pamtasks/: conftest.py  etl.py  map_.py  reduce.py  test_etl.py  test_map.py  test_reduce.py
